# HeartRateMonitor

./: Cargo.toml  README.md  settings_example.json  windows-build.sh
included_templates/: default.html.tera  index.html.tera  ws.html.tera
src/: api.rs  args.rs  config.rs  csv_log.rs  main.rs  shutdown_handler.rs  stdin.rs
src/adaptors/: adaptor_debug.rs  hrm.rs  mod.rs  type_1.rs
