[package]
name = "HRM"
version = "0.1.0"
edition = "2021"

[dependencies]
btleplug = {version = "0.11.5", default-features = false, features = ["serde"]}
uuid = {version = "1.10.0", default-features = false , features = ["serde"]}
tokio = { version = "1.38.1", default-features = false, features = ["rt", "rt-multi-thread", "macros", "signal"] }
tokio-util = {version = "0.7.11", default-features = false}
futures = {version = "0.3.30", default-features = false}
log = {version = "0.4.22", default-features = false}
anyhow = {version = "1.0.86", default-features = false, features = ["std"]}
config = {version = "0.14.0", default-features = false, features = ["json", "toml", "yaml"]}
serde = {version = "1.0.204", default-features = false}
serde_json = {version = "1.0.120", default-features = false}
clap = { version = "4.5.9", default-features = false, features = ["derive", "std", "help", "usage", "color", "suggestions", "wrap_help"] }
csv = {version = "1.3.0", default-features = false}
mac_address = {version = "1.1.7", default-features = false, features = ["serde"]}
poem = {version = "3.0.3", default-features = false, features = ["server", "websocket"]}
tera = {version = "1.20.0", default-features = false}
itertools = {version = "0.13.0", default-features = false, features = ["use_std"]}
lazy_static = {version = "1.5.0", default-features = false}
chrono = {version = "0.4.38", default-features = false, features = ["now", "clock", "serde"]}
tracing = { version = "0.1.40", default-features = false }
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["fmt", "ansi", "local-time", "tracing-log", "env-filter"] }
async-trait = {version = "0.1.81", default-features = false}